# cadtab

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile
app/: index.html  (+8 more)
crates/cadtab-core/: Cargo.toml
crates/cadtab-core/src/: ast.rs  beam.rs  completions.rs  diagnostics.rs  eval.rs  fmt.rs  imports.rs  instrument.rs  layout.rs  lexer.rs  lib.rs  model.rs  parser.rs  provider.rs  render.rs  resolve.rs  source.rs  span.rs  stdlib.rs  token.rs  types.rs
crates/cadtab-core/src/snapshots/: cadtab_core__ast__tests__sample_program_snapshot.snap  cadtab_core__eval__event_eval_tests__cripple_creek_compiles_to_a_golden_score.snap  cadtab_core__eval__event_eval_tests__def_call_lowering_snapshot.snap  cadtab_core__eval__event_eval_tests__event_lowering_snapshot.snap  cadtab_core__eval__event_eval_tests__fill_diagnostics_snapshot.snap  cadtab_core__eval__event_eval_tests__index_and_spread_snapshot.snap  cadtab_core__eval__event_eval_tests__loop_unroll_snapshot.snap  cadtab_core__eval__event_eval_tests__measure_assembly_snapshot.snap  cadtab_core__eval__event_eval_tests__repeat_assembly_snapshot.snap  cadtab_core__eval__event_eval_tests__showcase_compiles_to_a_golden_score.snap  cadtab_core__eval__event_eval_tests__stdlib_rolls_snapshot.snap  cadtab_core__eval__event_eval_tests__techniques_and_ties_snapshot.snap  cadtab_core__fmt__tests__showcase_snapshot.snap  cadtab_core__instrument__tests__pitch_derivation_table_snapshot.snap  cadtab_core__layout__tests__beamed_rhythm_layout_snapshot.snap  cadtab_core__layout__tests__cripple_creek_render_tree_snapshot.snap  cadtab_core__layout__tests__dotted_rhythm_layout_snapshot.snap  cadtab_core__layout__tests__flagged_notes_layout_snapshot.snap  cadtab_core__layout__tests__marks_layout_snapshot.snap  cadtab_core__layout__tests__repeat_with_endings_layout_snapshot.snap  cadtab_core__layout__tests__rests_layout_snapshot.snap  cadtab_core__layout__tests__showcase_render_tree_snapshot.snap  cadtab_core__layout__tests__simple_measure_layout_snapshot.snap  cadtab_core__layout__tests__wrapped_systems_layout_snapshot.snap  cadtab_core__lexer__tests__comments_and_whitespace_snapshot.snap  cadtab_core__lexer__tests__cripple_creek_lexes_cleanly.snap  cadtab_core__lexer__tests__metadata_header_snapshot.snap  cadtab_core__lexer__tests__music_line_snapshot.snap  cadtab_core__lexer__tests__showcase_lexes_cleanly.snap  cadtab_core__parser__tests__cripple_creek_parses_cleanly.snap  cadtab_core__parser__tests__events_body_snapshot.snap  cadtab_core__parser__tests__expression_event_snapshot.snap  cadtab_core__parser__tests__metadata_header_snapshot.snap  cadtab_core__parser__tests__recovery_diagnostics_snapshot.snap  (+7 more)
crates/cadtab-core/stdlib/: rolls.ctab
crates/cadtab-wasm/: Cargo.toml
crates/cadtab-wasm/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+94 files in other folders)
