[workspace]
resolver = "2"
members = ["crates/cadtab-core", "crates/cadtab-wasm", "src-tauri"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/brapru/cadtab"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
insta = "1"
proptest = "1"
